# pickleball-data-platform

./: .dockerignore  .env.example  .gcloudignore  .gitignore  CLAUDE.md  CREDENTIAL_ROTATION.md  Dockerfile  README.md  pyproject.toml
cloud/: setup.sh
dashboard/pages/: +layout.svelte  acquisition.md  affiliates.md  attribution.md  d2c.md  expenses.md  index.md  ltv.md  pipeline_health.md  revenue.md  wholesale.md
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/seeds/: bank_statement_affiliate.csv  bank_statement_expenses.csv  bank_statement_revenue.csv  paypal_partner_mapping.csv  paypal_txn_names.csv  shop_product_cogs.csv
pipelines/: __main__.py  config.py  daily_digest.py  health.py  notify.py  run.py  run_all.py
pipelines/amazon_ads/: __init__.py  client.py  helpers.py  pipeline.py  report_configs.py  source.py
pipelines/amazon_seller/: __init__.py  client.py  pipeline.py  source.py
pipelines/customer_match/: pipeline.py
pipelines/google_ads/: client.py  helpers.py  pipeline.py  source.py
pipelines/google_trends/: pipeline.py  source.py
pipelines/klaviyo/: client.py  pipeline.py  source.py
pipelines/merchant_center/: client.py  pipeline.py  source.py
pipelines/meta_ads/: client.py  helpers.py  pipeline.py  source.py
pipelines/paypal/: client.py  pipeline.py  source.py
pipelines/quickbooks/: auth.py  client.py  pipeline.py  source.py
pipelines/search_console/: client.py  pipeline.py  source.py
pipelines/shopify/: client.py  helpers.py  pipeline.py  (+1 more)
scripts/: rotate_credentials.py
tests/: test_helpers.py  test_report_configs.py
(+168 files in other folders)
